<resources>
    <string name="app_name" translatable="false">WA Recovery &amp; Tools</string>
    <string name="home" translatable="false">Home</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="admob_app_id" translatable="false">@string/admobAppId</string>
    <string name="banner_ad_unit_id" translatable="false">@string/admobBannerAdUnitId</string>
    <string name="interstitial_id" translatable="false">@string/admobInterstitialId</string>
    <string name="native_advanced" translatable="false">@string/admobNativeAdvanced</string>
    <string name="privacy_url" translatable="false">"https://catchyappsofficial.blogspot.com/2022/04/privacy-policy.html"</string>
    <string name="facebook_banner_ads_id" translatable="false">729641902896689_729646722896207</string>
    <string name="facebook_interstitial_id" translatable="false">729641902896689_729646889562857</string>
    <string name="facebook_native_banner_id" translatable="false">729641902896689_729647109562835</string>
    <string name="facebook_native_ads_id" translatable="false">729641902896689_729646999562846</string>
    <string name="status_permission" translatable="false">
            <![CDATA[ Please provide permission for  <b>"Whatsapp Status"</b> folder to view/edit/delete whatsapp statuses. This is
        only required once.<br> ]]>
    </string>
    <string name="doc_permission" translatable="false">
            <![CDATA[Please provide permission for  <b>"Whatsapp Media"</b> folder to view/edit/delete whatsapp media. This is
        only required once.<br>]]>
    </string>
    <string name="doc_permission_dialog" translatable="false">
           Please provide permission for "Whatsapp Media Folder" folder to view/edit/delete whatsapp data. This is
        only required once.
    </string>
    <string name="doc_sent_permission" translatable="false">
         <![CDATA[Please provide permission for  <b>"Whatsapp Documnets/Sent"</b> folder to view/edit/delete whatsapp
        documents. This is only required once.<br>]]>
    </string>
    <string name="image_permission" translatable="false">
        <![CDATA[Please provide permission for <b>"Whatsapp Image"</b> folder to view/edit/delete whatsapp images. This is
        only required once.<br>]]>
    </string>
    <string name="image_sent_permission" translatable="false">
         <![CDATA[ Please provide permission for  <b>"Whatsapp Image/Sent"</b> folder to view/edit/delete whatsapp
        images. This is only required once.<br>]]>
    </string>
    <string name="video_permission" translatable="false">
         <![CDATA[Please provide permission for <b>"Whatsapp Video"</b> folder to view/edit/delete whatsapp videos. This is
        only required once.<br>]]>
    </string>
    <string name="video_sent_permission" translatable="false">
         <![CDATA[ Please provide permission for  <b>"Whatsapp Video/Sent"</b> folder to view/edit/delete whatsapp
        videos. This is only required once.<br>]]>
    </string>
    <string name="audio_permission" translatable="false">
         <![CDATA[Please provide permission for <b>"Whatsapp Audio"</b> folder to view/edit/delete whatsapp audio files. This
        is only required once.<br>]]>
    </string>
    <string name="audio_sent_permission" translatable="false">
         <![CDATA[Please provide permission for  <b>"Whatsapp Audio/Sent"</b> folder to view/edit/delete whatsapp audio
        files. This is only required once.<br>]]>
    </string>
    <string name="voice_permission" translatable="false">
         <![CDATA[Please provide permission for <b>"Whatsapp Voice"</b> folder to view/edit/delete whatsapp voice notes. This is
        only required once. <br>]]>
    </string>
    <string name="voice_sent_permission" translatable="false">
         <![CDATA[Please provide permission for  <b>"Whatsapp Voice/Sent"</b> folder to view/edit/delete whatsapp
        voice notes. This is only required once.<br>]]>
    </string>
    <string name="wallpaper_permission" translatable="false">
         <![CDATA[ Please provide permission for <b>"Whatsapp Wallpaper"</b> folder to view/edit/delete whatsapp wallpapers. This
        is only required once.<br>]]>
    </string>
    <string name="wallpaper_sent_permission" translatable="false">
         <![CDATA[ Please provide permission for  <b>"Whatsapp Wallpaper/Sent"</b> folder to view/edit/delete whatsapp
        wallpapers. This is only required once.<br>]]>
    </string>
    <string name="gif_permission" translatable="false">
         <![CDATA[ Please provide permission for <b>"Whatsapp Gif"</b> folder to view/edit/delete whatsapp gifs. This is
        only required once.<br> ]]>
    </string>
    <string name="gif_sent_permission" translatable="false">
         <![CDATA[Please provide permission for  <b>"Whatsapp Gif/Sent"</b> folder to view/edit/delete whatsapp
        gifs. This is only required once.<br>]]>
        </string>
    <string name="action_settings">Settings</string>
    <string name="premium">Premium</string>
    <string name="upgrade_to_premium">Upgrade to premium</string>
    <string name="family_apps">Family apps</string>
    <string name="how_to_use">How to use</string>
    <string name="share">Share</string>
    <string name="rate_it">Rate it</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="help">Help</string>
    <string name="enable_permission">ENABLE PERMISSION</string>
    <string name="we_need_your_permission">We need your permission</string>
    <string name="we_need_your_permission_desc">In order to store your WhatsApp deleted messages locally, you need to allow \"Notification Access\" permission to this app. Select <b>WA Recover</b> application in next seen to enable the permission</string>
    <string name="no_deleted_chat_detected_yet">No deleted chat detected yet</string>
    <string name="select_all">Select All</string>
    <string name="delete">Delete</string>
    <string name="no_document_detected_yet">No Document detected yet</string>
    <string name="no_image_detected_yet">No Image detected yet</string>
    <string name="no_voice_detected_yet">No Voice notes detected yet</string>
    <string name="no_audio_detected_yet">No Audio detected yet</string>
    <string name="document">Document</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="voice_notes">Voice Notes</string>
    <string name="audio">Audio</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="next">Next</string>
    <string name="how_it_work_desc">
      <![CDATA[  1) Open the \'WhatsApp Messenger\'<br><br>
        <b><font color=\'#cc0029\'> 2) Imp*: Turn on auto download media setting from \'WhatsApp Messenger\' for better WA Recover Working.</font></b><br><br>
        3) Save WhatsApp media files(Image, Videos, Voice Notes, Audios, Documents).<br><br>
        4) You will be notified if any message is deleted from sender side.<br><br>
        5) Turn ON/OFF duplications in order to save storage.<br><br>
        6) Check or uncheck Tabs from settings to save that deleted media file.<br><br>
        7) Your WhatsApp notification must be turned on for getting deleted text messages.
    ]]></string>
    <string name="accept">Accept</string>
    <string name="media_file_backup_list">Media file backup list</string>
    <string name="erase_all_messages">Erase All Messages</string>
    <string name="today">Today</string>
    <string name="search">Search</string>
    <string name="back">iv back</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="upgrade_to_enjoy_premium">Upgrade to enjoy premium</string>
    <string name="no_status_found">No Status Found</string>
    <string name="restatus">Restatus</string>
    <string name="download">Download</string>
    <string name="enter_collection_name">Enter collection name</string>
    <string name="collection_name">Collection Name</string>
    <string name="cancel">CANCEL</string>
    <string name="create">CREATE</string>
    <string name="ok">OK</string>
    <string name="create_new_collection">Create new collection</string>
    <string name="edit">Edit</string>
    <string name="fullscreen">Full Screen</string>
    <string name="size_and_time">Size and Time</string>
    <string name="info">Info</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="removefavourite">Remove Favourite</string>
    <string name="totaltime">totaltime</string>
    <string name="runtime">runtime</string>
    <string name="please_select_a_song_from_the_playlist">Please select a song from the Playlist</string>
    <string name="customize_tabs">Customize Tabs</string>
    <string name="apply">Apply</string>
    <string name="mCursorDrawableRes">mCursorDrawableRes</string>
    <string name="open_whatsapp">Open WhatsApp</string>
    <string name="view_the_status_you_want_to_download">View Status</string>
    <string name="come_back_again">Come Back Again</string>
    <string name="noimagestatus">No Image Status Found</string>
    <string name="novideostatus">No Video Status Found</string>
    <string name="no_saved_status_found">No Saved Status Found</string>
    <string name="rest_assured_permission_text">Rest assured we do not use your private data for our own benefit.</string>
    <string name="drawablessd">mCursorDrawableRes</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="rename">RENAME</string>
    <string name="this_feature_uses_whatsapp_public_api_to_open_a_chat_with_any_number_you_enter_without_saving_any_number">This feature uses WhatsApp Public API to open a chat with any number you enter without saving any number</string>
    <string name="eg_1234567890">Eg: 1234567890</string>
    <string name="open_in_whatsapp_chat">Open in WhatsApp Chat</string>
    <string name="delete_items_blank">Clear Selected files (0B)</string>
    <string name="_0b">0B</string>
    <string name="files">Files</string>
    <string name="no_files">no files</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="clear_all_data">Clear All Data</string>
    <string name="_922">+92</string>
    <string name="screenshot">Screenshot</string>
    <string name="ad_loading">Loading Ad…</string>
    <string name="please_wait">Loading Ad Please wait…</string>
    <string name="_00_0000">00:00</string>
    <string name="no_video_detected_yet">No Videos detected yet</string>
    <string name="life_time"><b> Subscription</b></string>
    <string name="subscribe_now">Subscribe</string>
    <string name="continue_with_ads">Continue With Ads</string>
    <string name="recovery">Recovery</string>
    <string name="direct_chat">Direct Chat</string>
    <string name="status">Status</string>
    <string name="more_tools">More Tools</string>
    <string name="enjoyee_ads_free_application">AD Free Experience</string>
    <string name="restore_unlimited_messages_instantly">Restore Unlimited Messages Instantly</string>
    <string name="change_language">Change Language</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="cp_file" translatable="false">Audio Recovery <font size='10'>(Ad)</font></string>
    <string name="cp_cans" translatable="false">Language Translator <font size='10'>(Ad)</font></string>
    <string name="file_name">File Name</string>
    <string name="full_name">Full Name:</string>
    <string name="path">Path:</string>
    <string name="last_modification_date">Last Modification Date:</string>
</resources>