<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group>

        <item
            android:id="@+id/action_share"
            android:icon="@drawable/ic_nav_share"
            android:title="@string/share" />

        <item
            android:id="@+id/action_rate"
            android:icon="@drawable/ic_nav_rate"
            android:title="@string/rate_it" />

        <item
            android:id="@+id/action_family"
            android:icon="@drawable/ic_nav_familyapps"
            android:title="@string/family_apps" />

        <item
            android:id="@+id/action_privacy"
            android:icon="@drawable/ic_nav_privacy_policy"
            android:title="@string/privacy_policy" />

        <item
            android:id="@+id/action_language"
            android:icon="@drawable/ic_nav_language"
            android:title="@string/change_language" />


        <item
            android:id="@+id/action_privacy_settings"
            android:icon="@drawable/ic_nav_setting"
            android:title="@string/privacy_settings" />

    </group>

<group>
    <item android:title="More Apps">
        <menu>
            <item
                android:id="@+id/cp_filerecovert"
                android:icon="@drawable/file_recover_webp"
                android:title="@string/cp_file" />
            <item
                android:id="@+id/cp_Translator"
                android:icon="@drawable/ic_language_translator_webp"
                android:title="@string/cp_cans" />
        </menu>
    </item>
</group>

</menu>

