<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/actionSearch"
        android:icon="@drawable/icon_search"
        android:title="@string/search"
        android:visible="true"
        android:actionLayout="@layout/layout_view_search_"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_prem"
        android:title="@string/premium"
        app:actionLayout="@layout/item_anim_prem_layout"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always"
        android:icon="@drawable/settings_icon_"/>

</menu>
