<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/collection_name"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_playlist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:inputType="text"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/tvCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:text="@string/create"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>


</LinearLayout>