<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/_12sdp"
    android:paddingBottom="@dimen/_12sdp"
    android:background="@drawable/rounded_bg"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/enter_collection_name">

        <EditText
            android:id="@+id/etCollectionUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_collection_name"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/tvCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:text="@string/rename"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>
</LinearLayout>