<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_bg"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/layout_create_playlist"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="@string/create_new_collection"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/primary_folder_icon" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_create_playlist"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recycler_view_playlist"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/tvOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:text="@string/ok"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</RelativeLayout>