<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/select_all"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/selectall"
        app:layout_constraintEnd_toStartOf="@id/selectall"
        app:layout_constraintTop_toTopOf="@+id/selectall" />

    <CheckBox
        android:id="@+id/selectall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:button="@drawable/check_box_app"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/hChipGroup"
        android:layout_width="0dp"
        app:singleSelection="true"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/select"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/date"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/recycler_view"
            app:layout_constraintEnd_toStartOf="@id/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:background="@color/white"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/name"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/date"
            app:layout_constraintEnd_toStartOf="@id/size"
            app:layout_constraintStart_toEndOf="@id/date"
            app:layout_constraintTop_toTopOf="@id/date" />

        <com.google.android.material.chip.Chip
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:background="@color/white"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/size"
            android:textAllCaps="false"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/date"
            app:layout_constraintStart_toEndOf="@id/name"
            app:layout_constraintTop_toTopOf="@id/date" />

    </com.google.android.material.chip.ChipGroup>


    <Button
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/shape_btn"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/delete_items_blank"
        android:textAllCaps="false"
        android:textColor="@color/white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/ads_not_loaded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:singleLine="false"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/white"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/delete"
        app:layout_constraintTop_toBottomOf="@id/hChipGroup"
        tools:listitem="@layout/item_content_document_layout" />

    <TextView
        android:id="@+id/nofiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/no_files"
        android:visibility="gone"
        app:drawableTopCompat="@drawable/nofiles_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/hProgressbar"
        style="@style/Widget.App.CircularProgressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
